# garminexporter

./: .env.example  .gitignore  Makefile  requirements.txt  setup.cfg  setup.py
garminexporter/: fetch.py  fit.py  main.py  models.py
