[bdist_wheel]
universal = 1

[metadata]
name = garminexporter
url = https://github.com/sknutsen/garminexporter
project_urls =
    Source = https://github.com/sknutsen/garminexporter.git
classifiers =
    Programming Language :: Python :: 3.12

[options]
zip_safe = True
packages =
    garminexporter
python_requires = >=3.5
install_requires =
    garminexport[impersonate_browser]
    garmin-fit-sdk
    python-dotenv
    schedule

[options.extras_require]
# Note: needed to impersonate web browsers. Garmin Connect uses Cloudflare's bot
# protection which looks at TLS fingerprints to determine if the caller is a
# script (like curl) or a web browser. curl_cffi uses a patched libcurl to
# produce identical TLS fingerprints as real web browsers.
impersonate_browser = curl_cffi==0.5.9
